# pybase

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
dev/: helpers.py
src/core/: cli.py  logging_config.py  main.py
src/core/utils/: helpers.py
tests/: test_main.py
